--- a/templates/base.html
+++ b/templates/base.html
@@ -70,9 +70,25 @@
                     {% if user.is_authenticated %}
                     <img src="{{ user.userprofile.profile_picture }}" alt="Profile Picture" width="50" height="50"
                         class="rounded-circle d-none">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+                        </li>
+                    </ul>
                     {% else %}
                     <img src="{% static 'images/nobody.jpg' %}" alt="Profile Picture" width="50" height="50"
                         class="rounded-circle d-none">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
+                        </li>
+                    </ul>
                     {% endif %}
                 </span>
                 {% if user.is_authenticated %}
