--- a/comet/templates/comet/profile.html
+++ b/comet/templates/comet/profile.html
@@ -9,6 +9,7 @@
         <form method="post" action="{% url 'profile' %}">
             {% csrf_token %}
             {{ form.as_p }}
+            <input type="hidden" name="next" value="/comet/profile">
             <button type="submit" class="btn btn-signup">Update Profile</button>
         </form>
     </div>
