--- a/templates/base.html
+++ b/templates/base.html
@@ -65,31 +65,35 @@
                     </li>
                     {% endif %}
                 </ul>
-                <span class="navbar-text d-lg-none">
+                <div class="navbar-text d-lg-none">
                     {% if user.is_authenticated %}
                     <img src="{{ user.userprofile.profile_picture }}" alt="Profile Picture" width="50" height="50"
                         class="rounded-circle d-none">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'profile' %}">Profile</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
-                        </li>
-                    </ul>
+                    <div>
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+                            </li>
+                        </ul>
+                    </div>
                     {% else %}
                     <img src="{% static 'images/nobody.jpg' %}" alt="Profile Picture" width="50" height="50"
                         class="rounded-circle d-none">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'account_login' %}">Login</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
-                        </li>
-                    </ul>
+                    <div>
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
+                            </li>
+                        </ul>
+                    </div>
                     {% endif %}
-                </span>
+                </div>
                 {% if user.is_authenticated %}
                 <div class="dropdown d-none d-lg-block">
                     <img src="{{ user.userprofile.profile_picture }}" alt="Profile Picture" width="40" height="40"
@@ -159,8 +163,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
-    </script>
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
