--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -23,7 +23,7 @@
                     </div>
                     <div class="mb-3 form-check">
                         {{ form.remember }}
-                        <label class="form-check-label" for="remember">
+                        <label class="form-check-label" for="{{ form.remember.id_for_label }}">
                             {% trans "Remember me" %}
                         </label>
                     </div>
