--- a/comet/templates/comet/profile.html
+++ b/comet/templates/comet/profile.html
@@ -14,4 +14,6 @@
         </form>
     </div>
 </div>
+<script src="{% static 'js/critical.js' %}" defer></script>
+<script src="{% static 'js/non-critical.js' %}" async></script>
 {% endblock %}
