--- a/forum/templates/forum/post_detail.html
+++ b/forum/templates/forum/post_detail.html
@@ -12,7 +12,7 @@
                 <p class="post-subtitle">{{ post.author }} | {{ post.date_posted }}</p>
             </div>
             <div class="d-none d-md-block col-md-6 masthead-image">
-                <img src="{% static 'images/background.webp' %}" class="scale" alt="placeholder">
+                <img src="{% static 'images/background.webp' %}" class="scale" alt="background image">
             </div>
         </div>
     </div>
