--- a/forum/templates/forum/post_detail.html
+++ b/forum/templates/forum/post_detail.html
@@ -24,7 +24,7 @@
             <div class="card-body">
                 <!-- The post content goes inside the card-text. -->
                 <!-- Use the | safe filter inside the template tags -->
-                <p class="card-text">{{ post.content | safe }}</p>
+                <p class="card-text-post">{{ post.content | safe }}</p>
                 
                 {% if post.author == user %}
                     <button class="btn btn-sm btn-warning" onclick="showUpdateForm()">Update</button>
