--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg shadow-sm">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Git Comet</a>
+            <a class="navbar-brand" href="{{ home_url }}">Git Comet</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 {% if user.is_authenticated %}
